--- a/assets/css/layout/_default/home.css
+++ b/assets/css/layout/_default/home.css
@@ -59,6 +59,7 @@ hr.ldots {
 
 #i18n-menu > .on-plank,
 #more-menu > .on-plank,
+#duckduckgo,
 .pagefind-ui {
     margin-right: 1rem;
 }
